# flask-microblog

./: .gitignore  README.md  app.db  config.py  microblog.py  pyproject.toml  requirements.txt  tests.py
app/: __init__.py  cli.py  email.py  errors.py  forms.py  models.py  routes.py  search.py  tasks.py  translate.py
app/auth/: __init__.py  email.py  routes.py
app/errors/: __init__.py  handlers.py
app/main/: __init__.py  forms.py  routes.py
app/templates/: 404.html  500.html  _post.html  base.html  edit_profile.html  index.html  login.html  messages.html  register.html  reset_password.html  reset_password_request.html  search.html  user.html  user_popup.html
app/templates/auth/: register.html
app/templates/email/: reset_password.html
app/templates/errors/: 404.html  500.html
app/translations/ru/LC_MESSAGES/: messages.po
app/translations/uk/LC_MESSAGES/: messages.po
migrations/versions/: 14ba94822523_added_laguage_to_posts.py  14fb662246eb_added_followers_table.py  9ecc68fdc92d_added_private_messages.py  a9fc28c741dd_added_tasks_table.py  ae66e002d976_added_posts_table.py  cbd168fb3834_added_users_table.py  d90aea1c5a1c_added_extra_fields_to_user.py  f0793141fd6b_added_notifications.py
